Salesforce/main/default/objects/Item_del_Contrato__c/Item_del_Contrato__c.object-meta.xml
<CustomObject>
    <description>Item de CONTRATO DE LICENCIAMENTO PARA MULTIPLICAÇÃO E COMERCIALIZAÇÃO</description>
    <label>Item del Contrato</label>
    <nameField>
        <label>Nombre de Item del Contrato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items del Contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>