Salesforce/main/default/objects/Item_del_Contrato__c/fields/Contrato_de_Multiplicacao__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Multiplicacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato (Objetivo)</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Objetivos (Eventos)</relationshipLabel>
    <relationshipName>objetivos</relationshipName>
    <type>Lookup</type>
</CustomField>