Salesforce/main/default/objects/Item_del_Contrato__c/fields/Contrato_de_Multiplicacao_vol__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Multiplicacao_vol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato (Volumen)</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Produtos (Volumen)</relationshipLabel>
    <relationshipName>Volumen</relationshipName>
    <type>Lookup</type>
</CustomField>