Salesforce/main/default/objects/Item_del_Contrato__c/fields/Contrato_de_Multiplicacion__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Multiplicacion__c</fullName>
    <description>Relación entre la cabecera del Contrato con los items(información de la variedad, precio, etc)</description>
    <inlineHelpText>Relación entre la cabecera del Contrato con los items(información de la variedad, precio, etc)</inlineHelpText>
    <label>Contrato de Multiplicação</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Items del Contrato</relationshipLabel>
    <relationshipName>Items_del_Contrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>