Salesforce/main/default/objects/Item_del_Contrato__c/fields/Cultivar__c.field-meta.xml
<CustomField>
    <fullName>Cultivar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cultivar por el/los que se confecciona el contrato</description>
    <inlineHelpText>Cultivar por el/los que se confecciona el contrato</inlineHelpText>
    <label>Cultivar</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Items del Contrato</relationshipLabel>
    <relationshipName>Items_del_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>