Salesforce/main/default/objects/Item_del_Contrato__c/fields/Indice__c.field-meta.xml
<CustomField>
    <fullName>Indice__c</fullName>
    <label>Indice</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>