Salesforce/main/default/objects/Item_del_Contrato__c/fields/Nombre_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Registro__c</fullName>
    <formula>Cultivar__r.Variedade__r.Nombre_de_Registro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Registro</label>
    <type>Text</type>
</CustomField>