Salesforce/main/default/objects/Item_del_Contrato__c/fields/Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje__c</fullName>
    <label>Porcentaje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>