Salesforce/main/default/objects/Item_del_Contrato__c/fields/Praca__c.field-meta.xml
<CustomField>
    <fullName>Praca__c</fullName>
    <label>Praça</label>
    <length>60</length>
    <type>Text</type>
</CustomField>