Salesforce/main/default/objects/Item_del_Contrato__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <description>Precio dependiendo del Tipo de Cotización, indicado en la cabecera. Si el valor que se expresa se refiere a Dolar o se refiere a Kg. de Soja</description>
    <inlineHelpText>Precio dependiendo del Tipo de Cotización, indicado en la cabecera. Si el valor que se expresa se refiere a Dolar o se refiere a Kg. de Soja</inlineHelpText>
    <label>Preço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>