Salesforce/main/default/objects/Item_del_Contrato__c/fields/Referencia_de_Preco__c.field-meta.xml
<CustomField>
    <fullName>Referencia_de_Preco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referencia de Preço</label>
    <referenceTo>Referencia_de_Preco__c</referenceTo>
    <relationshipLabel>Items del Contrato</relationshipLabel>
    <relationshipName>Items_del_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>