Salesforce/main/default/objects/Item_del_Contrato__c/fields/Sociedad_SF__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_SF__c</fullName>
    <formula>Contrato_de_Multiplicacion__r.Sociedad_SF__c</formula>
    <label>Sociedad_SF</label>
    <type>Text</type>
</CustomField>