Salesforce/main/default/objects/Item_del_Contrato__c/fields/Tipo_de_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cotizacion__c</fullName>
    <formula>Text(Cultivar__r.Tipo_de_Cota_o_Contrato__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Cotação ant</label>
    <type>Text</type>
</CustomField>