Salesforce/main/default/objects/Item_del_Contrato__c/fields/Variedad__c.field-meta.xml
<CustomField>
    <fullName>Variedad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variedade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Marca__c</field>
            <operation>equals</operation>
            <valueField>Variedad__c.Sociedad__c</valueField>
        </filterItems>
        <filterItems>
            <field>Variedad__c.Ativa__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Items del Contrato</relationshipLabel>
    <relationshipName>Items_del_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>