Salesforce/main/default/objects/Item_del_Contrato__c/fields/Volumen_Aut_Comercializacion__c.field-meta.xml
<CustomField>
    <fullName>Volumen_Aut_Comercializacion__c</fullName>
    <label>Volumen Aut. Comercializacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>